tests/src/frontend/typechecking/invalid/infer_frozen_fun_2.sk
fun foo<T: frozen, U: Array<T>>(T): void {
  void
}
fun test(): void {
  foo(mutable Array[0])
}
